# Construct-erpnext

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
construct_erpnext/: hooks.py  modules.txt
construct_erpnext/construct_admin/: invoice_auth.py  reminders.py  tax_withholding.py
construct_erpnext/construct_finance/: treasury.py
construct_erpnext/construct_maintenance/: routines.py
construct_erpnext/construct_payroll/: distribution.py
construct_erpnext/construct_portal/: api.py  utils.py
construct_erpnext/construct_projects/: advancement.py  material.py  utils.py
construct_erpnext/construct_security/: audit.py
construct_erpnext/gcs_admin/: invoice_auth.py
construct_erpnext/gcs_payroll/: distribution.py
construct_erpnext/gcs_portal/: api.py
construct_erpnext/gcs_projects/: utils.py
construct_erpnext/gcs_security/: permissions.py
construct_erpnext/overrides/: journal_entry.py  project.py  salary_slip.py  task.py
construct_erpnext/public/css/: construct_erpnext.bundle.css
construct_erpnext/public/js/: asset.js  construct_erpnext.bundle.js  payment_entry.js  project.js  purchase_invoice.js  salary_slip.js  sales_invoice.js  task.js
construct_erpnext/setup/: __init__.py  custom_fields.json  install.py  payroll_setup.py  tax_setup.py
construct_erpnext/translations/: es.csv
construct_erpnext/www/advancement-auth/: advancement.html  advancement.py  index.html  index.py
construct_erpnext/www/client-documents/: index.html  index.py
construct_erpnext/www/client-invoices/: index.html  index.py
(+276 files in other folders)
